# spdm-emu

./: AGENTS.md  CMakeLists.txt
docs/: tf-rmm-device-assignment-analysis.md
rmm_style_demo/: CMakeLists.txt
rmm_style_demo/include/: rmm_demo_context.h  rmm_transport.h
rmm_style_demo/src/: main.c  rmm_demo_context.c  rmm_transport.c  support.c
spdm-device-sample/spdm_device_sample/: CMakeLists.txt
spdm_inproc_demo/: CMakeLists.txt  README_zh.md
spdm_inproc_demo/include/: internal_transport.h  spdm_context.h
spdm_inproc_demo/src/: internal_transport.c  main.c  spdm_context.c  support.c
spdm_inproc_demo/test/: CMakeLists.txt  test_spdm_inproc.c
